--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ spin = "0.4.9"
 version = "1.0"
 features = ["spin_no_std"]
 
+[dev-dependencies]
+array-init = "0.0.3"
+
 [profile.dev]
 panic = "abort"
 
