--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 bootloader = "0.3.12"
 volatile = "0.2.3"
 spin = "0.4.9"
+uart_16550 = "0.1.0"
+x86_64 = "0.4.0"
 
 [dependencies.lazy_static]
 version = "1.0"
