--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ uart_16550 = "0.1.0"
 x86_64 = "0.4.0"
 pic8259_simple = "0.1.1"
 pc-keyboard = "0.3.1"
+linked_list_allocator="0.6.3"
 
 [dependencies.lazy_static]
 version = "1.0"
