--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["lsongzhi <lsongzhi@163.com>"]
 edition = "2018"
 
 [dependencies]
-bootloader = "0.3.12"
+bootloader = {version="0.4.0",features = ["recursive_page_table"]}
 volatile = "0.2.3"
 spin = "0.4.9"
 uart_16550 = "0.1.0"
-x86_64 = "0.4.0"
+x86_64 = "0.5.2"
 pic8259_simple = "0.1.1"
 pc-keyboard = "0.3.1"
 linked_list_allocator="0.6.3"
