--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["lsongzhi <lsongzhi@163.com>"]
 edition = "2018"
 
 [dependencies]
-bootloader = {version="0.4.0",features = ["recursive_page_table"]}
+bootloader = {version="0.4.0",features = ["map_physical_memory"]}
 volatile = "0.2.3"
 spin = "0.4.9"
 uart_16550 = "0.1.0"
