--- a/.travis.yml
+++ b/.travis.yml
@@ -38,9 +38,8 @@ install:
   - if [ $TRAVIS_OS_NAME = windows ]; then choco install qemu; export PATH="/c/Program Files/qemu:$PATH"; fi
 
 before_script:
-  - rustup component add rust-src
-  - (test -x $HOME/.cargo/bin/cargo-install-latest || cargo install cargo-install-latest)
-  - cargo install-latest cargo-xbuild bootimage cargo-cache
+  - rustup component add rust-src llvm-tools-preview
+  - cargo install cargo-xbuild bootimage cargo-cache --debug -Z install-upgrade
 
 script:
   - bootimage build
