--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,14 @@ pc-keyboard = "0.3.1"
 linked_list_allocator="0.6.4"
 raw-cpuid = "6.1.0"
 
+[[test]]
+name = "panic_handler"
+harness = false
+
+[[test]]
+name = "stack_overflow"
+harness = false
+
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
@@ -30,3 +38,8 @@ panic = "abort"
 
 [package.metadata.bootimage]
 default-target = "x86_64-dongos.json"
+test-args = [
+    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
+    "-display", "none"
+]
+test-success-exit-code = 33         # (0x10 << 1) | 1
